--- a/public/main.css
+++ b/public/main.css
@@ -27,6 +27,7 @@ fieldset {
 }
 
 .form-inputs {
+  height: 30px;
   margin-left: 5px;
   padding-left: 5px;
 }
@@ -50,10 +51,18 @@ input[type=number]::-webkit-outer-spin-button {
 button {
   border-radius: 5px;
   border: 0;
-  width: 80px;
-  height:25px;
+  width: 115px;
+  height: 25px;
   margin-top: 14px;
-  background-color: rgba(255, 255, 255, 0.72);
+  background: rgba(255, 255, 255, 0.72);
+}
+
+button:hover {
+  background: rgba(146, 146, 146, 0.72);
+}
+
+button:active {
+  background: rgba(105, 104, 104, 0.72);
 }
 
 .setlist {
@@ -71,16 +80,25 @@ button {
 }
 
 .track-item-container {
-  background-color: rgba(104, 107, 112, 1);
+  background-color: rgba(183, 183, 183, .9);
   margin: 5px;
 }
 
+.delete-button-container {
+  display: inline-block;
+}
+
 .delete-button {
-	width: 17px;
-	vertical-align: text-top;
-	margin-left: 5px;
-	margin-right: 15px;
-  padding-left: 5px;
+  margin: 0 10px 0 10px;
+  cursor: pointer;
+}
+
+.delete-button:hover {
+  color: #635b5b;
+}
+
+.delete-button:active {
+    color: #dedede;
 }
 
 .rearrange-handle {
